--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "stikerinbot",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/ariffb25/stikerinbot",
+  "repository": "https://github.com/riztrexx/botwa",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": [
     "bot",
