--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "stikerinbot",
+  "name": "Fell CBOT",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/riztrexx/botwa",
-  "logo": "https://node-js-sample.herokuapp.com/node.png",
+  "logo": "https://imagedelivery.net/95QNzrEeP7RU5l5WdbyrKw/0564f3a7-0354-418e-d5be-a06b9368ba00/avatar",
   "keywords": [
     "bot",
     "whatsapp",
